[package]
name = "wx-rs"
version = "0.1.0"
authors = ["alex.n.charlton@gmail.com"]
edition = "2018"
description = "Self-contained wxWidgets in Rust."
repository = "https://github.com/AlexCharlton/wx-rs"
license = "MIT"
keywords = ["windowing"]
exclude = [
    "dist/wxWidgets/demos/*",
    "dist/wxWidgets/**/doc/*",
    "dist/wxWidgets/**/docs/*",
    "dist/wxWidgets/**/test/*",
    "dist/wxWidgets/**/tests/*",
    "dist/wxWidgets/**/testdata/*",
    "dist/wxWidgets/**/samples/*",
    "dist/wxWidgets/**/examples/*",
    "dist/wxWidgets/src/stc/*",
    "dist/wxWidgets/lib/vc_x64_lib/",
    "dist/wxWidgets/lib/vc_x64_lib/*",
    "dist/wxWidgets/build/msw/vc_x64_mswu/",
    "dist/wxWidgets/build/msw/vc_x64_mswu/*",
    "dist/wxWidgets/build/elfabi/*",
    "dist/wxWidgets/src/tiff/html/*"
]

[dependencies]
bitflags = "1.2.1"
raw-window-handle = "0.3.3"

[build-dependencies]
cc = "1.0"
embed-resource = "1.3"