[package]
name = "wx-rs"
version = "0.1.2"
authors = ["alex.n.charlton@gmail.com"]
edition = "2021"
description = "Self-contained wxWidgets in Rust."
repository = "https://github.com/AlexCharlton/wx-rs"
documentation = "https://docs.rs/wx-rs"
license = "MIT"
keywords = ["windowing"]

[features]
stub_lib = []

[package.metadata.docs.rs]
features = ["stub_lib"]

[dependencies]
bitflags = "1.2.1"
raw-window-handle = "0.5"

[build-dependencies]
cc = "1.0"
embed-resource = "1.3"
reqwest = { version = "0.11", features = ["blocking"] }
bzip2 = "0.4"
tar = "0.4"